# pipreqs

./: .gitignore  AGENTIC_DEVELOPMENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  README.md  README.rst  README_original.md  USAGE.md  UV_INTEGRATION.md  fix_tests.sh  pipreqs_actual_imports.txt  pyproject.toml  setup_claude_code.sh  setup_distribution.sh  tox.ini  validate_implementation.py
.github/workflows/: debug.yml  test.yml  tests.yml
demo_project/: app.py
examples/: uv_workflow.sh
pipreqs/: apt_mapping.json  pipreqs.py  system_detector.py
scripts/: test_all.sh  test_all_fixed.sh
scripts/reference/: check_packages.sh  check_packages_v1.sh  check_packages_v2.sh  scan_imports.sh
tests/: test_integration.py  test_performance.py  test_pipreqs.py  test_system.py  test_system_detector.py
