[tool.poetry]
name = "pipreqs"
version = "0.5.0"
description = "Pip requirements.txt generator based on imports in project"
authors = ["Vadim Kravcenko <vadim.kravcenko@gmail.com>"]
maintainers = ["Jonas Eschle <jonas.eschle@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/bndr/pipreqs"
keywords = ["pip", "requirements", "imports"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "pipreqs"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
yarg = ">=0.1.9"
docopt = ">=0.6.2"
nbconvert = ">=7.11.0"
ipython = ">=8.12.3"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6.1.0"
tox = ">=4.11.3"
coverage = ">=7.3.2"
sphinx = {version = ">=7.2.6", python = ">=3.9"}
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-benchmark = ">=4.0.0"

[tool.poetry.scripts]
pipreqs = "pipreqs.pipreqs:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--ignore=tests/_data --ignore=tests/_data_clean --ignore=tests/_data_ignore --ignore=tests/_data_duplicated_deps --ignore=tests/_invalid_data --ignore=tests/_data_notebook --ignore=tests/_data_pyw"
